// Auto-Generated by si-registry!
// Do not edit by hand!
// This means you! It won't last! You'll be sad!

syntax = "proto3";

package si.service_component;
import "google/protobuf/wrappers.proto";
import "si-registry/proto/si.data.proto";
import "si-registry/proto/si.cea.proto";
service ServiceComponent {
  rpc ServiceComponentGet(ServiceComponentGetRequest) returns (ServiceComponentGetReply);
  rpc ServiceComponentList(ServiceComponentListRequest) returns (ServiceComponentListReply);
  rpc ServiceComponentCreate(ServiceComponentCreateRequest) returns (ServiceComponentCreateReply);
  rpc ServiceComponentPick(ServiceComponentPickRequest) returns (ServiceComponentPickReply);
}
message ServiceComponentConstraints {
  google.protobuf.StringValue component_name = 1;
  google.protobuf.StringValue component_display_name = 2;
}
message ServiceComponent {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue display_name = 3;
  si.data.DataStorable si_storable = 4;
  google.protobuf.StringValue description = 5;
  si.service_component.ServiceComponentConstraints constraints = 6;
  si.cea.ComponentSiProperties si_properties = 7;
}
message ServiceComponentGetRequest {
  google.protobuf.StringValue id = 1001;
}
message ServiceComponentGetReply {
  si.service_component.ServiceComponent item = 1001;
}
message ServiceComponentListRequest {
  si.data.DataQuery query = 1;
  google.protobuf.UInt32Value page_size = 2;
  google.protobuf.StringValue order_by = 3;
  si.data.DataPageTokenOrderByDirection order_by_direction = 4;
  google.protobuf.StringValue page_token = 5;
  google.protobuf.StringValue scope_by_tenant_id = 6;
}
message ServiceComponentListReply {
  repeated si.service_component.ServiceComponent items = 1;
  google.protobuf.UInt32Value total_count = 2;
  google.protobuf.StringValue next_page_token = 3;
}
message ServiceComponentCreateRequest {
  google.protobuf.StringValue name = 1001;
  google.protobuf.StringValue display_name = 1002;
  google.protobuf.StringValue description = 1003;
  si.service_component.ServiceComponentConstraints constraints = 1;
  si.cea.ComponentSiProperties si_properties = 1004;
}
message ServiceComponentCreateReply {
  si.service_component.ServiceComponent item = 1;
}
message ServiceComponentPickRequest {
  si.service_component.ServiceComponentConstraints constraints = 1;
}
message ServiceComponentPickReply {
  si.service_component.ServiceComponentConstraints implicit_constraints = 1;
  si.service_component.ServiceComponent component = 2;
}
